src/objects/Followup_Form__c.object
<CustomObject>
    <fields>
        <fullName>Abv_Catg_not_Aplicable_age_50__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>NA</inlineHelpText>
        <label>Abv Catg not Aplicable &amp; age &gt; 50</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select Alive if Patient is alive.</inlineHelpText>
        <label>Alive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApprovalURL__c</fullName>
        <label>ApprovalURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Bilateral_oophorectomy_Date__c</fullName>
        <label>Bilateral oophorectomy Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bilateral_oophorectomy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select Yes or NO.</inlineHelpText>
        <label>Bilateral  oophorectomy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRF</label>
        <referenceTo>CRF__c</referenceTo>
        <relationshipLabel>Followup Forms</relationshipLabel>
        <relationshipName>Followup_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cause_of_Death__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select Cause of Death</inlineHelpText>
        <label>Cause of Death:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Causeof_Death__c</fullName>
        <label>Causeof  Death</label>
        <picklist>
            <picklistValues>
                <fullName>Due to this disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due to protocol treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due to other causes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Chemotherapy_Details__c</fullName>
        <label>Chemotherapy Details</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chemotherapy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select Yes or NO.</inlineHelpText>
        <label>Chemotherapy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clinical_assessment_Date__c</fullName>
        <label>Clinical assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <inlineHelpText>Enter relevant comment for DCC</inlineHelpText>
        <label>Comment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <label>CompletedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consent_for_follow_up_withdrawn__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select Consent for follow-up withdrawn if Patient is Consent for follow-up withdrawn.</inlineHelpText>
        <label>Consent for follow-  up withdrawn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <inlineHelpText>Enter the Date of diagnosis.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Menstrual_period_UKData12M__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Date of Last  Menstrual period UKData12M</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Menstrual_period_UKData__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Date of Last  Menstrual period UKData</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Menstrual_period__c</fullName>
        <inlineHelpText>Select date from the calendar or enter manually.</inlineHelpText>
        <label>Date of Last  Menstrual period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Death_Details__c</fullName>
        <inlineHelpText>NA</inlineHelpText>
        <label>Death Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_Cause_of_Death__c</fullName>
        <inlineHelpText>NA</inlineHelpText>
        <label>Describe Cause of  Death</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Add Description, Do not use any patient identifiable information</inlineHelpText>
        <label>Description</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distant__c</fullName>
        <label>Distant</label>
        <picklist>
            <picklistValues>
                <fullName>Contralateral Breast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distant Lymph Nodes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pleura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distant skin &amp; SubcutaneousTissue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bone marrow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brain/CNS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Distant_progression_Date__c</fullName>
        <label>Distant progression Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dose_per_FX_cGy__c</fullName>
        <inlineHelpText>Enter Dose per FX( cGY )</inlineHelpText>
        <label>Dose per FX (cGy)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effective_Time__c</fullName>
        <label>Effective_Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>Enters the end dates from the reporting period.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Save_and_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Save and Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hormone_Therapy_Details__c</fullName>
        <label>Hormone Therapy Details</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hormone_Therapy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select Yes or NO.</inlineHelpText>
        <label>Hormone Therapy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hysterectomy_Date__c</fullName>
        <label>Hysterectomy Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hysterectomy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select Yes or NO.</inlineHelpText>
        <label>Hysterectomy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local__c</fullName>
        <label>Local</label>
        <picklist>
            <picklistValues>
                <fullName>Ipsilateral Breast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axillary Nodes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Mammary Nodes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supraclavicular Nodes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infraclavicular Nodes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chest Wall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local-regionalSkin&amp;SubcutaneousTissue</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Local_progression_Date__c</fullName>
        <label>Local progression Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Long_Term_Therapy_for_primary_Trial__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select Yes or NO.</inlineHelpText>
        <label>Long  Term Therapy for primary Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lost_to_Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select Lost to Follow- Up if Patient is Lost to Follow-Up case.</inlineHelpText>
        <label>Lost to Follow-Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Menopausal_status__c</fullName>
        <label>Menopausal status</label>
        <picklist>
            <picklistValues>
                <fullName>Premenopausal(&lt;6 months)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perimenopausal(6-12months)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postmenopausal(&gt;12 months)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>age &lt; 50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abv Catg not Aplicable &amp; age &gt; 50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infraclavicular Nodes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chest Wall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local-regional skin and Subcutaneous tissue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Cancer__c</fullName>
        <inlineHelpText>Select Alive if Patient is alive.</inlineHelpText>
        <label>New Cancer</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notice_of_Progression__c</fullName>
        <label>Notice of  Progression</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Estrogen_Replacement_Months__c</fullName>
        <label>On Estrogen Replacement Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Estrogen_Replacement_Years__c</fullName>
        <label>On Estrogen Replacement Years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Estrogen_Replacement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select Yes or NO.</inlineHelpText>
        <label>On Estrogen  Replacement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OriginalCRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OriginalCRF</label>
        <referenceTo>Followup_Form__c</referenceTo>
        <relationshipLabel>Followup Forms</relationshipLabel>
        <relationshipName>Followup_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <inlineHelpText>Add any other reason</inlineHelpText>
        <label>Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Age_AP__c</fullName>
        <inlineHelpText>NA</inlineHelpText>
        <label>Patient Age(AP)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_diagnose_with_new__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select Yes or NO.</inlineHelpText>
        <label>Patient diagnose with new</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_doc_clinial_assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select Yes or NO.</inlineHelpText>
        <label>Patient doc clinial assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_received_adjuvant_therapy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select Yes or NO.</inlineHelpText>
        <label>Patient  received adjuvant  therapy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Perimenopausal_6_12months__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if the condition in braces is matched</inlineHelpText>
        <label>Perimenopausal(6-12months)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Postmenopausal_12_months__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if the  condition in braces is matched.</inlineHelpText>
        <label>Postmenopausal(&gt;12 months)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Premenopausal_6_months__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if the condition in braces is matched.</inlineHelpText>
        <label>Premenopausal(&lt;6 months)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_CRF_Form_after_Saving__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if you want a print of CRF after saving it.</inlineHelpText>
        <label>Print CRF Form  after Saving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Radiation_Therapy_Details__c</fullName>
        <label>Radiation Therapy Details</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radiation_Therapy_End_Date__c</fullName>
        <label>Radiation Therapy End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Radiation_Therapy_Start_Date__c</fullName>
        <label>Radiation Therapy Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Radiation_Therapy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select Yes or NO.</inlineHelpText>
        <label>Radiation Therapy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recurrence_progression_information__c</fullName>
        <inlineHelpText>Select from the check list.</inlineHelpText>
        <label>Recurrence /  progression  information</label>
        <picklist>
            <picklistValues>
                <fullName>Clinical Exam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radiographic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Histologic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Self Report only</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Root_CRF_Id__c</fullName>
        <label>Root CRF Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sign_Submit__c</fullName>
        <inlineHelpText>Enter your password in the text field.</inlineHelpText>
        <label>Sign &amp; Submit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sites_of_New_Progression__c</fullName>
        <inlineHelpText>NA</inlineHelpText>
        <label>Sites of New  Progression</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Enter the start date from the reporting period.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted by Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who is sign and submitting the record</description>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Followup_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Surgery_Details__c</fullName>
        <label>Surgery Details</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surgery__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select Yes or NO.</inlineHelpText>
        <label>Surgery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survival_Status__c</fullName>
        <inlineHelpText>Select the Survival Status.</inlineHelpText>
        <label>Survival Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestHarnessId__c</fullName>
        <externalId>true</externalId>
        <label>TestHarnessId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Therapies_received__c</fullName>
        <inlineHelpText>NA</inlineHelpText>
        <label>Therapies  received</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_FX__c</fullName>
        <inlineHelpText>Enter Total #FX</inlineHelpText>
        <label>Total #FX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_dose_cGy_AP__c</fullName>
        <label>Total dose (cGy)  AP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Treatment_s_for_new__c</fullName>
        <label>Treatment(s) for new</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrialPatient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TrialPatient</label>
        <referenceTo>TrialPatient__c</referenceTo>
        <relationshipLabel>Followup Forms</relationshipLabel>
        <relationshipName>Followup_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>age_50__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>NA</inlineHelpText>
        <label>age &lt; 50</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>patient_diagnosed_distant_progression__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select Yes or NO</inlineHelpText>
        <label>patient diagnosed distant progression</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>patient_diagnosed_local_progression__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select Yes or NO</inlineHelpText>
        <label>patient diagnosed  local progression</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>patient_have_a_menstrual_period__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select Yes or No.</inlineHelpText>
        <label>patient have a menstrual period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pg_Followup_Id__c</fullName>
        <label>pg_Followup_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_radio_button_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>test radio button</label>
        <type>Checkbox</type>
    </fields>
    <label>Followup Form</label>
    <nameField>
        <displayFormat>FF-{00000}</displayFormat>
        <label>Followup Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Followup Forms</pluralLabel>
    <recordTypes>
        <fullName>AdHoc</fullName>
        <active>true</active>
        <label>AdHoc</label>
    </recordTypes>
    <recordTypes>
        <fullName>Approval_Pending</fullName>
        <active>true</active>
        <label>Approval Pending</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live</fullName>
        <active>true</active>
        <label>Live</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Bilateral_oophorectomy_date_validation</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>Bilateral_oophorectomy_Date__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Bilateral_oophorectomy_Date__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Clinical_assessment_date_validation</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>Clinical_assessment_Date__c  &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Clinical_assessment_Date__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_of_Last_Menstrual_period_date_valid</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>Date_of_Last_Menstrual_period__c   &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Date_of_Last_Menstrual_period__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Distant_progression_date_validation</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>Distant_progression_Date__c    &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Distant_progression_Date__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_date_validation</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>End_Date__c    &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Hysterectomy_Date_date_validation</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>Hysterectomy_Date__c   &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Hysterectomy_Date__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Radiation_Therapy_End_date_validation</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>Radiation_Therapy_End_Date__c   &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Radiation_Therapy_End_Date__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Radiation_Therapy_Start_date_validation</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>Radiation_Therapy_Start_Date__c    &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Radiation_Therapy_Start_Date__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_date_validation</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>Start_Date__c    &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>date_validation_cannot_be_future</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>Date__c   &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Date__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
</CustomObject>